--- a/bmad-infographic.html
+++ b/bmad-infographic.html
@@ -537,7 +537,7 @@
 <body>
   <!-- Header -->
   <header class="header">
-    <a href="../index.html" class="back-link">
+    <a href="index.html" class="back-link">
       <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
         <path d="M19 12H5M12 19l-7-7 7-7" />
       </svg>
