--- a/index.html
+++ b/index.html
@@ -547,8 +547,8 @@
       <div class="logo-subtitle">&lt;/developer&gt;</div>
     </div>
     <nav class="nav">
-      <a href="#" class="nav-item">Home</a>
-      <a href="#" class="nav-item">About</a>
+      <a href="index.html" class="nav-item">Home</a>
+      <a href="about.html" class="nav-item">About</a>
     </nav>
     <div class="search-container">
       <div class="search-icon">
