change about me

--- a/about.html
+++ b/about.html
@@ -385,7 +385,7 @@
                     in a way that helps many.</p>
 
                 <p>If you're looking for someone who prefers direct answers, structured thinking, and getting things
-                    right, let's connect.</p>
+                    do, let's connect.</p>
             </div>
         </div>
     </main>
