--- a/bmad-infographic.html
+++ b/bmad-infographic.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BMAD Method — Infographic</title>
+  <title>BMAD Method - Infographic</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://api.fontshare.com/v2/css?f[]=satoshi@400,500,700,900&display=swap" rel="stylesheet">
@@ -670,7 +670,7 @@
 
   <!-- Hero -->
   <section class="hero">
-    <div class="hero-label animate">Infographic — AI Development Framework</div>
+    <div class="hero-label animate">Infographic - AI Development Framework</div>
     <h1 class="hero-title animate delay-1">
       BMAD
       <span>Breakthrough Method for Agile AI-Driven Development</span>
@@ -877,7 +877,7 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <span class="footer-text">© 2025 CHSAMI — BMAD Method Infographic</span>
+      <span class="footer-text">© 2025 CHSAMI - BMAD Method Infographic</span>
     <a href="https://github.com/bmadcode/BMAD-METHOD" target="_blank" class="footer-link">
       View on GitHub →
     </a>
