Update featured grid to show latest 3 posts - add AI Agents Markdown post

--- a/index.html
+++ b/index.html
@@ -842,19 +842,19 @@
             <div class="card-meta">7 min read · <span data-date="2025-12-27">27.12.2025</span></div>
           </div>
         </div>
-        <div class="featured-card" data-category="Architecture"
-          onclick="window.location.href='posts/bmad-infographic.html'">
+        <div class="featured-card" data-category="Development"
+          onclick="window.location.href='posts/ai-agents-markdown.html'">
           <div class="card-img-wrapper">
-            <img src="https://images.unsplash.com/photo-1531297484001-80022131f5a1?w=800&h=400&fit=crop"
-              alt="BMAD Method" class="card-img">
+            <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?w=800&h=400&fit=crop"
+              alt="How AI Agents Use Markdown Files" class="card-img">
           </div>
           <div class="card-content">
             <span class="card-number">02</span>
-            <div class="card-category">Architecture</div>
-            <h3 class="card-title">BMAD Method - AI Development Framework</h3>
-            <p class="card-excerpt">A comprehensive framework that integrates agile methodologies with AI agents to
-              streamline software development.</p>
-            <div class="card-meta">10 min read · <span data-date="2025-12-27">27.12.2025</span></div>
+            <div class="card-category">Development</div>
+            <h3 class="card-title">How AI Agents Use Markdown Files</h3>
+            <p class="card-excerpt">Discover how modern AI coding agents leverage markdown files like AGENTS.md,
+              CLAUDE.md, and CURSOR.md to understand your project context.</p>
+            <div class="card-meta">8 min read · <span data-date="2025-12-27">27.12.2025</span></div>
           </div>
         </div>
       </div>
