Add SEO meta tags, structured data, and LLM discoverability files
- Add meta descriptions, Open Graph, and Twitter Card tags to all pages
- Add JSON-LD structured data (Blog, Article, ProfilePage schemas)
- Create robots.txt for search engine crawlers
- Create sitemap.xml with all pages and metadata
- Create llms.txt for AI crawler discoverability
- Improve Google search rankings and LLM content discovery

--- a/about.html
+++ b/about.html
@@ -5,7 +5,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - CHSAMI</title>
+    <meta name="description"
+        content="About Sami - A software developer writing about AI agents, development tools, and modern coding practices.">
+    <meta name="author" content="Sami">
+    <link rel="canonical" href="https://chsami.com/about.html">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://chsami.com/about.html">
+    <meta property="og:title" content="About - CHSAMI">
+    <meta property="og:description"
+        content="About Sami - A software developer writing about AI agents, development tools, and modern coding practices.">
+    <meta property="og:image" content="https://chsami.com/og-image.png">
+    <meta property="og:site_name" content="CHSAMI">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="About - CHSAMI">
+    <meta name="twitter:description"
+        content="About Sami - A software developer writing about AI agents, development tools, and modern coding practices.">
+    <meta name="twitter:image" content="https://chsami.com/og-image.png">
+
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ProfilePage",
+      "mainEntity": {
+        "@type": "Person",
+        "name": "Sami",
+        "description": "Software developer writing about AI agents, development tools, and modern coding practices",
+        "url": "https://chsami.com/about.html"
+      }
+    }
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://api.fontshare.com/v2/css?f[]=satoshi@400,500,700,900&display=swap" rel="stylesheet">
