--- a/index.html
+++ b/index.html
@@ -5,7 +5,70 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CHSAMI - Developer Blog</title>
+  <meta name="description" content="Software development blog by Sami covering AI agents, development tools, Claude Code, specification-driven development, and modern coding practices.">
+  <meta name="author" content="Sami">
+  <link rel="canonical" href="https://chsami.com/">
+  
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://chsami.com/">
+  <meta property="og:title" content="CHSAMI - Developer Blog">
+  <meta property="og:description" content="Software development blog by Sami covering AI agents, development tools, Claude Code, specification-driven development, and modern coding practices.">
+  <meta property="og:image" content="https://chsami.com/og-image.png">
+  <meta property="og:site_name" content="CHSAMI">
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="CHSAMI - Developer Blog">
+  <meta name="twitter:description" content="Software development blog by Sami covering AI agents, development tools, Claude Code, specification-driven development, and modern coding practices.">
+  <meta name="twitter:image" content="https://chsami.com/og-image.png">
+  
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Blog",
+    "name": "CHSAMI",
+    "description": "Software development blog about AI agents, development tools, and modern coding practices",
+    "url": "https://chsami.com",
+    "author": {
+      "@type": "Person",
+      "name": "Sami"
+    },
+    "blogPost": [
+      {
+        "@type": "BlogPosting",
+        "headline": "Ralph - Autonomous Loop for Claude Code",
+        "datePublished": "2026-01-01",
+        "author": {"@type": "Person", "name": "Sami"},
+        "url": "https://chsami.com/posts/ralph-claude-code.html"
+      },
+      {
+        "@type": "BlogPosting",
+        "headline": "SpecKit - Specification-Driven Development",
+        "datePublished": "2025-12-27",
+        "author": {"@type": "Person", "name": "Sami"},
+        "url": "https://chsami.com/posts/speckit-specification-driven-development.html"
+      },
+      {
+        "@type": "BlogPosting",
+        "headline": "How AI Agents Use Markdown Files",
+        "datePublished": "2025-12-27",
+        "author": {"@type": "Person", "name": "Sami"},
+        "url": "https://chsami.com/posts/ai-agents-markdown.html"
+      },
+      {
+        "@type": "BlogPosting",
+        "headline": "BMAD Method - AI Development Framework",
+        "datePublished": "2025-12-27",
+        "author": {"@type": "Person", "name": "Sami"},
+        "url": "https://chsami.com/posts/bmad-infographic.html"
+      }
+    ]
+  }
+  </script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://api.fontshare.com/v2/css?f[]=satoshi@400,500,700,900&display=swap" rel="stylesheet">
